[package]
name = "oxidown"
version = "0.1.0"
edition = "2024"
description = "A blazing fast, multi-threaded file downloader written in Rust."

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["stream", "socks"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "time",
    "sync",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
